<resources>
    <string name="app_name">Popular Movies Stage 1</string>
    <string name="sort_most_popular">Sort Most Popular</string>
    <string name="sort_highest_rated">Sort Highest Rated</string>
    <string name="no_connection_established">No connection established</string>
    <string name="summary_of_movie_plot">Summary of movie plot</string>
    <string name="_10">/10</string>
    <string name="year">Year</string>
    <string name="title">Title</string>
    <string name="review_of_movie">Review of Movie</string>
    <string name="author">Author</string>
    <string name="no_reviews">Sorry no reviews found.</string>
    <string name="movie_id">Movie ID</string>
    <string name="no_trailers">No Trailers, sorry!</string>
    <string name="sort_by_favorites_label">Favorites</string>
    <string name="no_favorites">Sorry no favorites!</string>
    <string name="favorite_marked">Movie Favorited</string>
    <string name="not_added_to_favorites">Click to add to favorites</string>
    <string name="content_authority">com.example.android.popular_movies_stage_1</string>
    <string name="favorite_movies_table_name">movies</string>
</resources>
